ctowasm/test/samples/error/declarations/typdef_and_static.c
// Duplicate storage class specifier. Violates 6.7.1/2 of C17 standard

int main() {
  typedef static int x;
}